<resources>
    <string name="app_name">WebVideoBrowser</string>
    <string name="cast_receiver_application_id">D1CAAFD8</string>

    <string name="snackbar_redirect_message">Redirect to %s?</string>
    <string name="snackbar_redirect_action">Go</string>

    <string name="snackbar_play_error_message">Cast Error: %s</string>

    <string name="snackbar_try_again_message">Try again using proxy?</string>
    <string name="snackbar_try_again_action">Yes</string>

    <string name="toast_close_app">Click again to close app</string>

    <string name="toast_restart_to_apply">Restart app to apply skip time for notification</string>

    <string name="toast_bookmark_no_page">No page loaded</string>

    <string name="navigation_title_streams">Streams</string>
    <string name="navigation_title_history">History</string>
    <string name="navigation_title_cast">Cast</string>
    <string name="navigation_title_bookmarks">Bookmarks</string>
    <string name="navigation_title_settings">Settings</string>
    <string name="navigation_title_help">Help</string>

    <string name="card_history_source">Source: %s</string>
    <string name="card_history_host">Host: %s</string>
    <string name="card_history_file">File: %s</string>
    <string name="card_history_time">%s</string>

    <string name="fragment_bookmark_edit_title">Edit bookmark</string>
    <string name="fragment_bookmark_edit_hint_url">Url</string>
    <string name="fragment_bookmark_edit_hint_title">Title</string>
    <string name="fragment_bookmark_edit_save">Save</string>
    <string name="fragment_bookmark_edit_remove">Remove</string>

    <string name="dialog_history_edit_title">Edit History</string>
    <string name="dialog_history_edit_remove">Remove</string>

    <string name="dialog_stream_info_loading">Loading url info…</string>

    <string name="dialog_stream_copy_url">Copy Url</string>
    <string name="dialog_stream_open_url">Open Url</string>

    <string name="dialog_stream_resume_title">Resume stream</string>
    <string name="dialog_stream_resume_message">Start stream at %s?</string>

    <string name="fragment_stream_info_title">Stream Info</string>

    <string name="fragment_stream_info_video_error">Error while loading video, try again.</string>
    <string name="fragment_stream_info_use_proxy">Stream using proxy</string>

    <string name="fragment_stream_info_action_share">Share</string>
    <string name="fragment_stream_info_action_download">Download</string>
    <string name="fragment_stream_info_action_cast">Cast</string>
    <string name="fragment_stream_info_action_play">Play</string>
    <string name="fragment_stream_info_snackbar_download_started">Download started, check notification</string>

    <string name="help_html">
    <![CDATA[
    <div>
        <h1>Help</h1>
        <h3>Title</h3>
        <p>Chromecast does not support every video format, more info <a href="https://developers.google.com/cast/docs/media">here</a></p>
        <h3>Title</h3>
        <p>Lorem ipsum</p>
    </div>
    ]]>
    </string>

    <string name="fragment_streams_local_file">Local file</string>

    <string name="dialog_cast_options_use_proxy">Cast through proxy?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>