<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    <item
        android:id="@+id/action_navigation_streams"
        android:icon="@drawable/icon_navigation_stream"
        android:title="@string/navigation_title_streams"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/action_navigation_bookmarks"
        android:icon="@drawable/icon_bookmark"
        android:title="@string/navigation_title_bookmarks"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_navigation_history"
        android:icon="@drawable/icon_history"
        android:title="@string/navigation_title_history"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_navigation_divider"
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/action_navigation_todo"
        android:icon="@drawable/icon_help"
        android:title="TODO"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_navigation_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/navigation_title_settings"
        app:showAsAction="always" />

</menu>